# libmultilingual

./: .gitignore  CMakeLists.txt  README.md  multilingual.pc.in
include/: multilingual.h
src/: Translator.cpp  TranslatorTypes.cpp  multilingual.h
test/: Makefile  en_US.lang  main.cpp  test.cpp
test/lang/: en_GB.lang
